# authentication-dummy

./: .gitignore  CODEOWNERS  COPYRIGHT  INSTALL  MANIFEST.in  README  README.md  __init__.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  tryton.cfg  user.py
.github/workflows/: publish.yml  tests.yml
doc/: index.rst
src/: __init__.py
src/authentication_dummy/: user.py
tests/: __init__.py  conftest.py  test_authentication_dummy.py  test_login.py
tests/etc/: test.cfg
tests/factories/: __init__.py  user.py
