[metadata]
name             = trytoncalidae-authentication_dummy
version          = attr: authentication_dummy.__version__
author           = Calidae
author_email     = dev@calidae.com
url              = https://github.com/calidae/authentication_dummy
description      = Authenticate without password
long_description = file: README.md
long_description_content_type = text/markdown
license          = GPLv3+
platform         = any
classifiers      =
    Development Status :: 4 - Beta
    Framework :: Tryton
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Testing :: Unit

[options]
python_requires  = >=3.7
packages         = authentication_dummy
package_dir      =
    =src
install_requires =
    factory_trytond
    trytond ~= 6.2.0

[options.entry_points]
trytond.modules =
    authentication_dummy= trytond.modules.authentication_dummy

[options.extras_require]
tests            =
    pytest-trytond
